Arbeit an der Linux Kompatibilität